--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -882,6 +882,136 @@ section.lazy-placeholder:after {
     text-align: center;
   }
 }
+.cid-rRXfBuOOFx {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #ffffff;
+}
+.cid-rRXfBuOOFx .container {
+  overflow: hidden;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 169px 92px;
+  border-radius: 50px;
+  background-color: #ffdbc9;
+  max-width: 80%;
+}
+@media (max-width: 767px) {
+  .cid-rRXfBuOOFx .container {
+    padding: 140px 15px;
+  }
+}
+.cid-rRXfBuOOFx section {
+  position: relative;
+}
+.cid-rRXfBuOOFx .mbr-section-title {
+  z-index: 70;
+  color: #133996;
+}
+.cid-rRXfBuOOFx .mbr-text,
+.cid-rRXfBuOOFx .mbr-section-btn {
+  color: #46495f;
+  z-index: 70;
+}
+.cid-rRXfBuOOFx img {
+  max-width: 100%;
+  vertical-align: middle;
+  display: inline-block;
+}
+.cid-rRXfBuOOFx .wrap {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.cid-rRXfBuOOFx .image-1 {
+  position: absolute;
+  left: -95px;
+  bottom: -3px;
+  -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  will-change: transform;
+}
+.cid-rRXfBuOOFx .image-2 {
+  position: absolute;
+  left: -23%;
+  top: -75%;
+  right: auto;
+  bottom: auto;
+  -webkit-transition: all 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: transform;
+}
+.cid-rRXfBuOOFx .image-3 {
+  position: absolute;
+  left: 209px;
+  bottom: -131px;
+  -webkit-transition: all 1.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 1.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  will-change: transform;
+}
+.cid-rRXfBuOOFx .image-4 {
+  position: absolute;
+  right: -61px;
+  bottom: -52px;
+  -webkit-transition: all 1.6s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 1.6s cubic-bezier(0.19, 1, 0.22, 1);
+  will-change: transform;
+}
+.cid-rRXfBuOOFx .image-5 {
+  position: absolute;
+  left: 77px;
+  top: 175px;
+  -webkit-transition: all 1.8s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: all 1.8s cubic-bezier(0.215, 0.61, 0.355, 1);
+  will-change: transform;
+}
+.cid-rRXfBuOOFx .image-6 {
+  position: absolute;
+  left: -295px;
+  top: 290px;
+  -webkit-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 2s cubic-bezier(0.23, 1, 0.32, 1);
+  will-change: transform;
+}
+@media (max-width: 1199px) {
+  .cid-rRXfBuOOFx .image-6 {
+    left: -165px;
+    top: 290px;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rRXfBuOOFx .image-1 {
+    bottom: -323px;
+  }
+  .cid-rRXfBuOOFx .image-2 {
+    left: -53%;
+  }
+  .cid-rRXfBuOOFx .image-3 {
+    bottom: 29px;
+  }
+  .cid-rRXfBuOOFx .image-5 {
+    left: 337px;
+    top: -65px;
+  }
+  .cid-rRXfBuOOFx .image-6 {
+    top: 60px;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rRXfBuOOFx .image-1 {
+    left: 205px;
+    bottom: -273px;
+  }
+  .cid-rRXfBuOOFx .image-2 {
+    left: -27%;
+  }
+  .cid-rRXfBuOOFx .image-4 {
+    right: -101px;
+  }
+}
 .cid-rOc2tFNOBU {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1010,6 +1140,211 @@ section.lazy-placeholder:after {
   }
   .cid-rOc2tFNOBU .reverse .timeline-text-content {
     margin-right: 0 !important;
+  }
+}
+.cid-rRXfjHZnIF {
+  padding-top: 150px;
+  padding-bottom: 150px;
+  background-color: #ffffff;
+}
+.cid-rRXfjHZnIF img {
+  width: 15%;
+}
+.cid-rRXfjHZnIF .card {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.cid-rRXfjHZnIF .card-box {
+  width: 100%;
+}
+.cid-rRXfjHZnIF .card-img {
+  padding: 1rem;
+  height: 120px;
+  width: 120px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  display: flex;
+  background-color: #133996;
+  border-radius: 50%;
+}
+.cid-rRXfjHZnIF .card-img span {
+  color: #ffffff;
+  font-size: 3.5rem;
+}
+.cid-rRXfjHZnIF .mbr-text {
+  color: #767676;
+}
+.cid-rRXfjHZnIF p {
+  margin: 0;
+}
+@media (max-width: 576px) {
+  .cid-rRXfjHZnIF .card {
+    margin-bottom: 2rem;
+  }
+}
+.cid-rRXfjHZnIF .card-title,
+.cid-rRXfjHZnIF .card-img {
+  color: #fc643f;
+  text-align: center;
+}
+.cid-rRXfjHZnIF .mbr-section-title {
+  text-align: center;
+}
+.cid-rRXfjHZnIF .mbr-section-sub-title {
+  text-align: center;
+  color: #9e9e9e;
+}
+.cid-rRXfjHZnIF .mbr-section-title,
+.cid-rRXfjHZnIF .line-wrap {
+  text-align: center;
+}
+.cid-rRXfjHZnIF .mbr-text,
+.cid-rRXfjHZnIF .line-wrap2 {
+  text-align: center;
+  color: #000000;
+}
+.cid-rRXfjHZnIF img {
+  vertical-align: middle;
+  display: inline-block;
+}
+.cid-rRXfjHZnIF .wrap {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.cid-rRXfjHZnIF .image-1 {
+  position: absolute;
+  left: -455px;
+  bottom: 107px;
+  -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  will-change: transform;
+}
+.cid-rRXfjHZnIF .image-2 {
+  position: absolute;
+  left: 517px;
+  top: 35px;
+  -webkit-transition: all 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: transform;
+}
+.cid-rRXfjHZnIF .image-3 {
+  position: absolute;
+  left: 1189px;
+  bottom: -1px;
+  -webkit-transition: all 1.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 1.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  will-change: transform;
+}
+.cid-rRXfjHZnIF .image-4 {
+  position: absolute;
+  left: auto;
+  right: 1109px;
+  bottom: -112px;
+  -webkit-transition: all 1.6s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 1.6s cubic-bezier(0.19, 1, 0.22, 1);
+  will-change: transform;
+}
+.cid-rRXfjHZnIF .image-5 {
+  position: absolute;
+  left: 707px;
+  top: -65px;
+  -webkit-transition: all 1.8s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: all 1.8s cubic-bezier(0.215, 0.61, 0.355, 1);
+  will-change: transform;
+}
+.cid-rRXfjHZnIF .image-6 {
+  position: absolute;
+  left: -155px;
+  top: 40px;
+  -webkit-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 2s cubic-bezier(0.23, 1, 0.32, 1);
+  will-change: transform;
+}
+@media (max-width: 1199px) {
+  .cid-rRXfjHZnIF .image-1 {
+    left: -175px;
+    bottom: 349px;
+  }
+  .cid-rRXfjHZnIF .image-2 {
+    left: 677px;
+    top: -475px;
+  }
+  .cid-rRXfjHZnIF .image-3 {
+    left: 469px;
+    bottom: -61px;
+  }
+  .cid-rRXfjHZnIF .image-4 {
+    right: 99px;
+    bottom: -192px;
+  }
+  .cid-rRXfjHZnIF .image-5 {
+    left: 7px;
+    top: -45px;
+  }
+  .cid-rRXfjHZnIF .image-6 {
+    left: 215px;
+    top: -460px;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rRXfjHZnIF .image-1 {
+    bottom: 287px;
+    left: -285px;
+  }
+  .cid-rRXfjHZnIF .image-2 {
+    top: -385px;
+    left: 807px;
+  }
+  .cid-rRXfjHZnIF .image-3 {
+    left: -98px;
+    bottom: 139px;
+  }
+  .cid-rRXfjHZnIF .image-4 {
+    right: 49px;
+    bottom: -102px;
+  }
+  .cid-rRXfjHZnIF .image-5 {
+    left: 207px;
+    top: -45px;
+  }
+  .cid-rRXfjHZnIF .image-6 {
+    left: -165px;
+    top: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rRXfjHZnIF .image-1 {
+    left: -185px;
+    bottom: 937px;
+  }
+  .cid-rRXfjHZnIF .image-2 {
+    top: -685px;
+    left: 477px;
+  }
+  .cid-rRXfjHZnIF .image-3 {
+    left: -41px;
+    bottom: 539px;
+  }
+  .cid-rRXfjHZnIF .image-4 {
+    bottom: 288px;
+    right: 99px;
+  }
+  .cid-rRXfjHZnIF .image-5 {
+    left: -93px;
+    top: -245px;
+  }
+  .cid-rRXfjHZnIF .image-6 {
+    left: 205px;
+    top: -80px;
   }
 }
 .cid-rOc2usnBhZ {
@@ -1236,394 +1571,6 @@ section.lazy-placeholder:after {
   .cid-rOc2uJVmqd .map1 {
     padding-bottom: 2rem;
   }
-}
-.cid-rOc2vmKyni {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rOc2vmKyni p {
-  color: #939bb4;
-}
-.cid-rRSDMiynHm .container {
-  max-width: 1110px;
-}
-.cid-rRSDMiynHm .navbar-dropdown {
-  position: relative !important;
-  top: 0;
-  left: 0;
-  padding: 0.5rem 1rem;
-}
-.cid-rRSDMiynHm .collapsed {
-  -webkit-box-orient: horizontal !important;
-  -webkit-box-direction: normal !important;
-  -ms-flex-direction: row !important;
-  flex-direction: row !important;
-}
-.cid-rRSDMiynHm .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-rRSDMiynHm .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.235em 1.5em 0.235em 1.5em !important;
-  -webkit-transition: none;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-rRSDMiynHm .navbar-brand {
-  min-width: 15%;
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-right: 0;
-  padding: 0;
-  -webkit-transition: font-size 0.25s;
-  transition: font-size 0.25s;
-  word-break: break-word;
-  z-index: 1;
-  font-size: 3.7rem !important;
-}
-.cid-rRSDMiynHm .navbar-brand span {
-  margin-right: 0 !important;
-}
-.cid-rRSDMiynHm .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-rRSDMiynHm .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-rRSDMiynHm .navbar-brand .navbar-logo a span {
-  color: #fc643f;
-}
-.cid-rRSDMiynHm .nav-item:focus,
-.cid-rRSDMiynHm .nav-link:focus {
-  outline: none;
-}
-.cid-rRSDMiynHm .text-white:hover,
-.cid-rRSDMiynHm .text-white:active,
-.cid-rRSDMiynHm .text-white:focus {
-  color: white !important;
-}
-.cid-rRSDMiynHm .dropdown-menu {
-  background-color: #ffffff !important;
-}
-.cid-rRSDMiynHm .navbar .dropdown.open > .dropdown-menu {
-  border-radius: 10px;
-  -webkit-box-shadow: 0 10px 55px 5px rgba(25, 74, 195, 0.35);
-  box-shadow: 0 10px 55px 5px rgba(25, 74, 195, 0.35);
-  display: block;
-}
-.cid-rRSDMiynHm .nav-item:hover .nav-link:before {
-  opacity: 1 !important;
-}
-@media (min-width: 992px) {
-  .cid-rRSDMiynHm .nav-item .nav-link {
-    position: relative;
-  }
-}
-.cid-rRSDMiynHm .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  -webkit-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-}
-.cid-rRSDMiynHm .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-rRSDMiynHm .dropdown .dropdown-menu .dropdown-item:hover {
-  padding-left: 2rem;
-  padding-right: 1rem;
-}
-.cid-rRSDMiynHm .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-left: -1.8rem;
-  padding-right: 1rem;
-  font-size: inherit;
-}
-.cid-rRSDMiynHm .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  -webkit-transform: scale(1, 1);
-  transform: scale(1, 1);
-  -webkit-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-}
-.cid-rRSDMiynHm .navbar {
-  min-height: 77px;
-  margin-top: 12.5px;
-  margin-bottom: 2.5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  background: #ffffff;
-}
-.cid-rRSDMiynHm .navbar .container.opened {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  background: #ffffff !important;
-}
-.cid-rRSDMiynHm .navbar .container .dropdown-item {
-  padding: 0.235rem 1.5rem;
-}
-.cid-rRSDMiynHm .navbar .container .navbar-collapse {
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed .dropdown-menu {
-  background: transparent !important;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-  margin-left: 0.25rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 55%;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed .dropdown-menu .dropdown-item {
-  padding: 0.25rem 1.5rem;
-  text-align: center;
-}
-.cid-rRSDMiynHm .navbar .container.collapsed .icons-menu {
-  padding-left: 0;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  color: #133996;
-}
-@media (max-width: 991px) {
-  .cid-rRSDMiynHm .navbar .container .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-rRSDMiynHm .navbar .container.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-rRSDMiynHm .navbar .container .dropdown-menu {
-    background: transparent !important;
-  }
-  .cid-rRSDMiynHm .navbar .container .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-rRSDMiynHm .navbar .container .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-rRSDMiynHm .navbar .container .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-    margin-left: 0.25rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 55%;
-  }
-  .cid-rRSDMiynHm .navbar .container ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-rRSDMiynHm .navbar .container ul.navbar-nav li a {
-    padding: 10px !important;
-  }
-  .cid-rRSDMiynHm .navbar .container .dropdown-menu .dropdown-item {
-    padding: 0.25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-rRSDMiynHm .navbar .container .navbar-brand {
-    -ms-flex-negative: initial;
-    flex-shrink: initial;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-    word-break: break-word;
-    font-size: 3.7rem !important;
-    -webkit-transition: font-size 0.25s;
-    transition: font-size 0.25s;
-  }
-  .cid-rRSDMiynHm .navbar .container .navbar-buttons .btn {
-    margin: 10px 0 0 0 !important;
-  }
-  .cid-rRSDMiynHm .navbar .container .navbar-toggler {
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-  }
-  .cid-rRSDMiynHm .navbar .container .icons-menu {
-    padding-left: 0;
-    padding-top: 1rem;
-    padding-bottom: 0.5rem;
-    color: #133996;
-  }
-}
-.cid-rRSDMiynHm .navbar .container.navbar-short {
-  background: #ffffff !important;
-  min-height: 60px;
-}
-.cid-rRSDMiynHm .navbar .container.navbar-short .navbar-logo {
-  font-size: 3.7rem !important;
-  -webkit-transition: font-size 0.25s;
-  transition: font-size 0.25s;
-}
-.cid-rRSDMiynHm .navbar .container.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 3.7rem !important;
-  -webkit-transition: font-size 0.25s;
-  transition: font-size 0.25s;
-}
-.cid-rRSDMiynHm .navbar .container.navbar-short .navbar-brand {
-  padding: 0;
-}
-.cid-rRSDMiynHm .dropdown-item.active,
-.cid-rRSDMiynHm .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-rRSDMiynHm .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-rRSDMiynHm .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-rRSDMiynHm .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
-}
-.cid-rRSDMiynHm .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-rRSDMiynHm .navbar-expand-lg .btn {
-  margin-top: 10px !important;
-}
-.cid-rRSDMiynHm ul.navbar-nav {
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.cid-rRSDMiynHm .navbar-buttons {
-  text-align: center;
-}
-.cid-rRSDMiynHm .navbar-buttons .btn {
-  padding: 12px 33px !important;
-  margin: 0 0 0 15px !important;
-}
-.cid-rRSDMiynHm button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-  position: relative;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-}
-.cid-rRSDMiynHm button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #133996;
-}
-.cid-rRSDMiynHm button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-.cid-rRSDMiynHm button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  -webkit-transition: all 0.15s;
-  transition: all 0.15s;
-}
-.cid-rRSDMiynHm button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  -webkit-transition: all 0.15s;
-  transition: all 0.15s;
-}
-.cid-rRSDMiynHm button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-.cid-rRSDMiynHm nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-.cid-rRSDMiynHm nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
-}
-.cid-rRSDMiynHm nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
-}
-.cid-rRSDMiynHm nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-.cid-rRSDMiynHm .nav-link {
-  font-weight: 600 !important;
-}
-.cid-rRSDMiynHm a.nav-link {
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.cid-rRSDMiynHm .mbr-iconfont {
-  padding-right: 0.5rem;
-}
-.cid-rRSDMiynHm .icons-menu {
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding-left: 1rem;
-  text-align: center;
-  color: #133996;
-}
-.cid-rRSDMiynHm .icons-menu span {
-  font-size: 26px;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-rRSDMiynHm .navbar {
-    height: 77px;
-  }
-  .cid-rRSDMiynHm .navbar.opened {
-    height: auto;
-  }
-}
-.cid-rRSDMiynHm .mbr-semibold {
-  font-weight: 600 !important;
-}
-.cid-rRSDMiynHm .firstlink {
-  color: #fc643f !important;
-}
-.cid-rRSDMiynHm .firstlink:hover {
-  color: #fc643f !important;
 }
 .cid-rOc2vmKyni {
   padding-top: 30px;
